fixed website on mobile

--- a/themes/catppollo/sass/parts/_header.scss
+++ b/themes/catppollo/sass/parts/_header.scss
@@ -20,6 +20,7 @@ header {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   padding: 1em 0;
 }
 
@@ -27,16 +28,14 @@ header .main {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   gap: 12px;
   font-size: 1.5rem;
-
-  /* Otherwise header and menu is too close on small screens*/
-  margin-bottom: 5px;
+  position: relative;
 }
 
-header .social img,
+header .social svg,
 header #dark-mode-toggle img {
   width: 16px;
   height: 16px;
@@ -72,22 +71,138 @@ header .socials {
   align-items: center;
 }
 
-.social > img {
+.social > svg {
   border: unset;
   width: 24px;
   height: 24px;
+  fill: var(--text);
+  transition: fill 150ms ease-in-out;
+}
+
+.social:hover > svg {
+  fill: var(--hover-color);
+}
+
+header nav {
+  display: flex;
+  gap: 10px;
+}
+
+header nav a {
+  // margin: 6px 0px;
+  display: flex;
+  align-items: center;
+}
+
+header nav div {
+  display: flex;
+  align-items: center;
+}
+
+.hamburger {
+  position: absolute;
+  right: 0;
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+
+.hamburger input::before,
+.hamburger input::after,
+.hamburger input {
+  content: "";
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: var(--text);
+  border-radius: 9999px;
+  transition: all 300ms ease-in-out;
+  box-sizing: border-box;
+  transform-origin: center;
+  pointer-events: none;
+}
+
+.hamburger input::before,
+.hamburger input::after {
+  position: absolute;
+}
+
+.hamburger input::before {
+  transition-delay: 50ms;
+  bottom: 8px;
+}
+
+.hamburger input::after {
+  transition-delay: 100ms;
+  top: 8px;
+}
+
+.hamburger input {
+  appearance: none;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  pointer-events: none;
+  position: relative;
+}
+
+.hamburger input:checked {
+  background-color: #ffffff00;
+}
+
+.hamburger input:checked::before {
+  transform: translate(0, 8px) rotate(45deg);
+}
+
+.hamburger input:checked::after {
+  transform: translate(0, -8px) rotate(315deg);
+}
+
+@media (min-width: 681px) {
+  .mobile {
+    display: none;
+  }
 }
 
 /* Mobile-specific adjustments */
-@media (max-width: 600px) {
+@media (max-width: 680px) {
   header {
     flex-direction: column;
     align-items: center;
     padding: 1em 0;
+    position: relative;
   }
 
-  header .main a {
-    font-size: 20px;
+  .desktop {
+    display: none;
+  }
+
+  nav {
+    flex-direction: column;
+    width: 100%;
+    top: 4em;
+    position: absolute;
+    background-color: var(--bg-0);
+    padding-bottom: 1em;
+    border-bottom: 4px solid var(--primary-color);
+
+    transform: translate(0, -300px);
+    opacity: 0;
+
+    transition: all 300ms ease-in-out;
+  }
+
+  .main:has(.hamburger input:checked) ~ nav {
+    transform: translate(0, 0);
+    opacity: 1;
+  }
+
+  nav > a {
+    margin: auto;
+  }
+
+  header .main {
+    width: 100%;
   }
 }
 
@@ -99,6 +214,12 @@ header .socials {
   /* Aligns items vertically in the middle */
   flex-wrap: wrap;
   /* Allows items to wrap as needed */
+}
+
+.icons-wrapper {
+  display: flex;
+  gap: 7px;
+  justify-content: center;
 }
 
 #dark-mode-toggle > img {
